--- a/style.css
+++ b/style.css
@@ -39,6 +39,13 @@ body {
   font-weight: 100;
   margin: 0 auto;
 }
+#time{
+  font-size: 17px;
+  font-weight: 100;
+  margin: 2px auto;
+  color: rgb(0, 0, 0);
+
+}
 .global {
   font-size: 12px;
   margin: 1px auto;
