--- a/style.css
+++ b/style.css
@@ -1,10 +1,26 @@
 body {
   font-family: sans-serif;
   background-image: url(https://www.yokohamaport.co.jp/wp/wp-content/uploads/2022/03/yokohamakou-R2-PA-01.jpg);
+  /* background-image: url(); */
+  /* background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOQ4pSXcbpRedx9s6u65-Je0lwsa-24vQJsg&usqp=CAU); */
+  /* background-image: url(); */
+  background-image: url(https://gaijinpot.scdn3.secure.raxcdn.com/app/uploads/sites/6/2016/08/Minato-mirai.jpg);
+  /* background-image: url(); */
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+.nav > ul{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+}
+.nav > ul > li{
+  font-size: 18px;
+  font-weight: 100;
+  margin-right: 10px;
 }
 
 .current-container {
@@ -116,4 +132,39 @@ body {
 }
 .forecast-detail{
     text-align: right;
+}
+
+
+
+.background{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+}
+#background-description{
+  font-size: 12px;
+  margin-right: 8px;
+  margin-bottom: 8px;
+}
+#background-input{
+  width: 110px;
+  height: 14px;
+  font-size: 10px;
+  border: none;
+  border-radius: 3px;
+  margin-right: 5px;
+}
+#background-button{
+  width: 45px;
+  height: 20px;
+  font-size: 9px;
+  font-weight: 400;
+  background-color: rgb(40, 40, 40);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
