--- a/mobile.css
+++ b/mobile.css
@@ -158,7 +158,7 @@ body {
     border-radius: 3px;
     margin-right: 5px;
   }
-  #background-button{
+  #background-submit{
     width: 45px;
     height: 20px;
     font-size: 9px;
