--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 body {
   font-family: sans-serif;
-  background-image: url(https://www.yokohamaport.co.jp/wp/wp-content/uploads/2022/03/yokohamakou-R2-PA-01.jpg);
-  /* background-image: url(); */
+  /* background-image: url(https://www.yokohamaport.co.jp/wp/wp-content/uploads/2022/03/yokohamakou-R2-PA-01.jpg); */
   /* background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOQ4pSXcbpRedx9s6u65-Je0lwsa-24vQJsg&usqp=CAU); */
-  /* background-image: url(); */
-  background-image: url(https://gaijinpot.scdn3.secure.raxcdn.com/app/uploads/sites/6/2016/08/Minato-mirai.jpg);
+  /* background-image: url(https://gaijinpot.scdn3.secure.raxcdn.com/app/uploads/sites/6/2016/08/Minato-mirai.jpg); */
   /* background-image: url(); */
   background-size: cover;
   background-position: center center;
@@ -148,6 +146,7 @@ body {
   font-size: 12px;
   margin-right: 8px;
   margin-bottom: 8px;
+  color: rgb(46, 46, 46);
 }
 #background-input{
   width: 110px;
@@ -156,6 +155,18 @@ body {
   border: none;
   border-radius: 3px;
   margin-right: 5px;
+}
+#background-submit{
+  width: 45px;
+  height: 20px;
+  font-size: 9px;
+  font-weight: 400;
+  background-color: rgb(40, 40, 40);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 4px;
 }
 #background-button{
   width: 45px;
