--- a/style.css
+++ b/style.css
@@ -20,6 +20,17 @@ body {
   font-weight: 100;
   margin-right: 10px;
 }
+.pull-down{
+  margin-right: 10px;
+  padding: 4px;
+  border: 0.5px solid rgba(255, 255, 255, 0.4);
+  border-radius: 5px;
+  border-right-color: rgba(255, 255, 255, 0.2);
+  border-bottom-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(20px);
+}
+
 
 .current-container {
   border: 0.5px solid rgba(255, 255, 255, 0.4);
