--- a/style.css
+++ b/style.css
@@ -16,8 +16,6 @@ body {
   list-style: none;
 }
 .nav > ul > li{
-  font-size: 18px;
-  font-weight: 100;
   margin-right: 10px;
 }
 .pull-down{
@@ -29,6 +27,13 @@ body {
   border-bottom-color: rgba(255, 255, 255, 0.2);
   background-color: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(20px);
+  cursor: pointer;
+}
+.settings{
+  text-decoration: none;
+  color: black;
+  font-size: 15px;
+  font-weight: 300;
 }
 
 
