--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: sans-serif;
   /* background-image: url(https://www.yokohamaport.co.jp/wp/wp-content/uploads/2022/03/yokohamakou-R2-PA-01.jpg); */
   /* background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOQ4pSXcbpRedx9s6u65-Je0lwsa-24vQJsg&usqp=CAU); */
-  background-image: url(https://gaijinpot.scdn3.secure.raxcdn.com/app/uploads/sites/6/2016/08/Minato-mirai.jpg);
+  /* background-image: url(https://gaijinpot.scdn3.secure.raxcdn.com/app/uploads/sites/6/2016/08/Minato-mirai.jpg); */
   /* background-image: url(); */
   background-size: cover;
   background-position: center center;
